2007-04-11  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm: New discovery param: show-recursive

	* templates/default-dir.html: Limit recursive view to
	subtrees having show-recursive=yes

2007-04-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/ConfigTree.pm:
	Moved the param properties to the XML config.
	All trees need recompilation after this change.

2007-04-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/ConfigTree/XMLCompiler.pm (compile_subtrees):
	Removed support for <filepattern>

2007-03-23  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/RRDtool.pm (rrd_make_graphline):
	line-style line-color from the node params override thse
	in the view params

2007-03-18  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/JunOS.pm: Added per-CoS traffic statistics

2007-03-16  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Apache2Handler.pm, perllib/Torrus/ApacheHandler.pm:
	User login event in the apache error log

	* perllib/Torrus/DevDiscover/CiscoIOS_MacAccounting.pm:
	MAC accounting on subinterfaces

2007-02-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS.pm (discover):
	Replaced CiscoIOS::disable-membuf-stats with
	CiscoIOS::enable-membuf-stats.
	Now cisco buffer stats are disabled by default

2007-02-13  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/SNMP.pm: SNMP maps automatic refreshing

	* bin/devdiscover.in: Devdiscover now accepts multiple input files

2007-02-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm:
	New discovery param: template-registry-overlays

2007-02-02  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoSCE.pm:
	Added service counters and queue utilization
