@@ -23,7 +23,9 @@
 
 cmd=$1
 
-commands="acl=acledit acledit=acledit cleanup=cleanup \
+commands="acl=acledit acledit=acledit \
+          bs=buildsearchdb buildsearchdb=buildsearchdb \
+          cleanup=cleanup \
           clc=clearcache clearcache=clearcache \
           collector=collector \
           compile=compilexml compilexml=compilexml \
