@@ -27,6 +27,16 @@
 
 <configuration>
 
+<param-properties>
+  <!-- Parameters which are included in search DB -->
+  <prop param="interface-name"               prop="search" value="1"/>
+  <prop param="interface-macaddr"            prop="search" value="1"/>
+  <prop param="interface-macaddr"            prop="search" value="1"/>
+  <prop param="interface-nick"               prop="search" value="1"/>
+  
+</param-properties>
+
+
 <definitions>
   <!-- IF-MIB:ifTable  -->
   <def name="ifDescr"           value="1.3.6.1.2.1.2.2.1.2" />
